[gd_scene load_steps=5 format=3 uid="uid://b4e2em28cqkd4"]

[ext_resource type="ArrayMesh" uid="uid://8ojpotqybhat" path="res://objects/switch_lever.obj" id="1_i80v6"]
[ext_resource type="AudioStream" uid="uid://c08ad60d68xsh" path="res://Sounds/buttom click 1.wav" id="2_1getl"]
[ext_resource type="Script" path="res://scripts/3D Scripts/Switch3D.gd" id="2_inkt2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kg4xh"]
radius = 0.247978
height = 0.811551

[node name="Switch3D" type="Node3D"]
script = ExtResource("2_inkt2")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_1getl")
volume_db = 12.19

[node name="SwitchContainer" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.807218, 0.590254, 0, -0.590254, 0.807218, 0, 0, 0)

[node name="SwitchLever" type="MeshInstance3D" parent="SwitchContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.44893, -1.06804, -1.22959)
mesh = ExtResource("1_i80v6")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="SwitchContainer"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SwitchContainer/Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.989576, -0.144011, 0, 0.144011, 0.989576, 0, 0.0375847, -0.0721699)
shape = SubResource("CapsuleShape3D_kg4xh")

[connection signal="mouse_entered" from="SwitchContainer/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="SwitchContainer/Area3D" to="." method="_on_area_3d_mouse_exited"]
